--- a/SidebarMenu/SidebarMenu/Base.lproj/LaunchScreen.xib
+++ b/SidebarMenu/SidebarMenu/Base.lproj/LaunchScreen.xib
@@ -12,11 +12,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="481" height="783"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2018 OGRO. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="439" width="441" height="21"/>
+                    <rect key="frame" x="20" y="742" width="441" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="5Ck-fB-rvO"/>
                     </constraints>
@@ -25,27 +25,28 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OGRO" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="251" width="441" height="43"/>
+                    <rect key="frame" x="20" y="355" width="441" height="43"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="VBF-9Z-FhI"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="29"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="32"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="CompanyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="qYU-7W-QbX">
-                    <rect key="frame" x="120" y="91" width="240" height="128"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" image="ogro_trans" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qYU-7W-QbX">
+                    <rect key="frame" x="78" y="91" width="324" height="190"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="128" id="fC8-BM-7W4"/>
-                        <constraint firstAttribute="width" constant="240" id="rq1-m1-nwR"/>
+                        <constraint firstAttribute="height" constant="190" id="fC8-BM-7W4"/>
+                        <constraint firstAttribute="width" constant="324" id="rq1-m1-nwR"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shop Smart" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="501-h2-aBx">
-                    <rect key="frame" x="86" y="296" width="309" height="37"/>
+                    <rect key="frame" x="86" y="401" width="309" height="37"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="37" id="t5S-Qd-kZk"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="22"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -60,16 +61,16 @@
                 <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="8ie-xW-0ye" secondAttribute="leading" id="h2t-PP-BIf"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="trailing" secondItem="8ie-xW-0ye" secondAttribute="trailing" id="ix8-od-N7R"/>
                 <constraint firstItem="qYU-7W-QbX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="91" id="mcK-K7-SrL"/>
-                <constraint firstItem="501-h2-aBx" firstAttribute="top" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="2" id="qYg-Wn-4y4"/>
+                <constraint firstItem="501-h2-aBx" firstAttribute="top" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="3" id="qYg-Wn-4y4"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="centerX" secondItem="501-h2-aBx" secondAttribute="centerX" id="tqo-uE-jpf"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="qYU-7W-QbX" secondAttribute="bottom" constant="32" id="yOo-3Y-Chf"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="qYU-7W-QbX" secondAttribute="bottom" constant="74" id="yOo-3Y-Chf"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="548" y="455"/>
+            <point key="canvasLocation" x="548.5" y="606.5"/>
         </view>
     </objects>
     <resources>
-        <image name="CompanyLogo" width="150" height="104"/>
+        <image name="ogro_trans" width="150" height="104"/>
     </resources>
 </document>
