#app icon updated

--- a/SidebarMenu/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/SidebarMenu/Base.lproj/Main.storyboard
@@ -786,7 +786,7 @@
                                     <segue destination="VwI-tb-ZRn" kind="push" id="KWA-3o-Tke"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8e1-ZS-kHt">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8e1-ZS-kHt">
                                 <rect key="frame" x="194" y="155" width="165" height="165"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="poultry">
